--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.2.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.16.2",
     "socket.io": "^4.8.3",
     "sqlite3": "^5.1.7"
